--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    ...
+    <link rel="icon" type="image/x-icon" href="src/assets/logo.png">
     <title>Manas Mitra</title>
   </head>
   <body>
